frontend/src/components/stylesheets/components/user_show.scss
.user-show-container {
  @import './snippet_show_card.scss';
 
  position: relative;
  width: 100vw;
  min-height: 100vh;
  box-sizing: border-box;
  padding: (50px + 45px) 50px 50px 50px;
  margin: auto;
  overflow-y: scroll;
  z-index: 100;

  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;

  .left-container {
    position: fixed;
    top: 45px;
    left: 0;
    
    box-sizing: border-box;
    min-width: 300px;
    width: 30%;
    height: 100%;
    // border-right: 1px solid $shadow;
    @include box-shadow;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    div.user-info-container {
      width: 100%;
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;

      h2.username {
        text-align: center;
        margin-bottom: 0;
      }

      button.follow-btn {
        @include button-basic;
        margin-bottom: 1em;
      }

      .padding {
        margin-bottom: 3em;
      }

      div.user-icon-container {
        max-width: 100px;
        max-height: 100px;
        border-radius: 5px;
        overflow: hidden;

        .profile-picture {
          width: 100px;
        }
      }
      
      div.user-stat {
        width: 10em;
        display: flex;
        flex-direction: row;
        justify-content: space-between;

        p.num {
          font-weight: 500;
        }

        p.label {

          &:hover {
            text-decoration: underline;
            color: $link;
            cursor: pointer;
          }
        }
      }
    }
  }

  .right-container {
    position: absolute;
    top: 0%;
    right: 0%;
    
    box-sizing: border-box;
    min-width: 640px;
    width: 70%;
    min-width: 600px;
    min-height: 100%;
    padding: 5em;
    background-color: $wisp;

    overflow-y: scroll;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    section {
      width: 100%;
      min-height: 100px;
      box-sizing: border-box;
      padding-bottom: 3em;

      &:not(:first-child) {
        border-top: 1px solid $light-shadow;
      }

      p.empty-msg {
        margin-bottom: 3em;
      }

      ul.user-cards {
        width: inherit;

        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
      }
      
    }

    div.snippet-show-card-container {
      @include flex-centered;
      @include box-shadow;

      border-radius: 5px;
      overflow: hidden;

      box-sizing: border-box;
      margin-bottom: 1em;
    }
  }
}
#footer-container {
  position: absolute;
  bottom: 0%;
}

